--- a/arch/arm/mm/Kconfig
+++ b/arch/arm/mm/Kconfig
@@ -1060,3 +1060,20 @@ config DEBUG_RODATA
 	  text so it can be made explicitly non-executable. This creates
 	  another section-size padded region, so it can waste more memory
 	  space while gaining the read-only protections.
+
+config HARDEN_BRANCH_PREDICTOR
+	bool "Harden the branch predictor against aliasing attacks" if EXPERT
+	default y
+	help
+	  Speculation attacks against some high-performance processors rely on
+	  being able to manipulate the branch predictor for a victim context by
+	  executing aliasing branches in the attacker context.  Such attacks
+	  can be partially mitigated against by clearing internal branch
+	  predictor state and limiting the prediction logic in some situations.
+
+	  This config option will take CPU-specific actions to harden the
+	  branch predictor against aliasing attacks and may rely on specific
+	  instruction sequences or control bits being set by the system
+	  firmware.
+
+	  If unsure, say Y.
