--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -175,3 +175,7 @@ obj-$(CONFIG_ANDROID)		+= android/
 obj-$(CONFIG_NVMEM)		+= nvmem/
 obj-$(CONFIG_FPGA)		+= fpga/
 obj-$(CONFIG_TEE)		+= tee/
+
+obj-$(CONFIG_ACCESSORY)		+= accessory/
+obj-$(CONFIG_SENSORS)		+= sensors/
+obj-y += motor/
