--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1216,6 +1216,9 @@ config SND_SOC_WM8993
 config SND_SOC_WM8994
 	tristate "Wolfson Microelectronics WM8994 codec driver"
 
+config SND_SOC_WM8994_P4
+	tristate "WM8994 for Samsung P4 codec"
+
 config SND_SOC_WM8995
 	tristate
 
