DT: set sdio sdhci host to 25Mhz
Tegra reference manual:
 Table 81 Performance Maximums
 SDIO 0-25MHZ i.e. 100 Mbits/sec interface speed

--- a/arch/arm/boot/dts/tegra20-samsung_p3.dts
+++ b/arch/arm/boot/dts/tegra20-samsung_p3.dts
@@ -1302,6 +1302,7 @@
 		status = "okay";
 		bus-width = <4>;
 		power-gpios = <&gpio TEGRA_GPIO(Q, 2) GPIO_ACTIVE_HIGH>;
+		max-frequency = <25000000>;
 		keep-power-in-suspend;
 		broken-cd;
 		no-1-8-v;
