--- a/drivers/staging/tegra/video/Kconfig
+++ b/drivers/staging/tegra/video/Kconfig
@@ -63,15 +63,15 @@ config TEGRA_NVMAP
 	  Say Y here to include the memory management driver for the Tegra
 	  GPU, multimedia and display subsystems
 
-# config NVMAP_RECLAIM_UNPINNED_VM
-# 	bool "Virtualize IOVMM memory in nvmap"
-# 	depends on TEGRA_NVMAP && (TEGRA_IOVMM || IOMMU_API)
-# 	default y
-# 	help
-# 	  Say Y here to enable nvmap to reclaim I/O virtual memory after
-# 	  it has been unpinned, and re-use it for other handles. This can
-# 	  allow a larger virtual I/O VM space than would normally be
-# 	  supported by the hardware, at a slight cost in performance.
+config NVMAP_RECLAIM_UNPINNED_VM
+	bool "Virtualize IOVMM memory in nvmap"
+	depends on TEGRA_NVMAP && (TEGRA_IOVMM || IOMMU_API)
+#	default y
+	help
+	  Say Y here to enable nvmap to reclaim I/O virtual memory after
+	  it has been unpinned, and re-use it for other handles. This can
+	  allow a larger virtual I/O VM space than would normally be
+	  supported by the hardware, at a slight cost in performance.
 
 config NVMAP_ALLOW_SYSMEM
 	bool "Allow physical system memory to be used by nvmap"
@@ -175,13 +175,13 @@ config TEGRA_DSI
 	help
 	  Say Y here to enable the DSI panel.
 
-#config NVMAP_CONVERT_CARVEOUT_TO_IOVMM
-#	bool "Convert carveout to IOVMM"
-#	depends on TEGRA_NVMAP &&  (TEGRA_IOVMM_SMMU || IOMMU_API)
-#	default y
-#	help
-#	  Say Y here to force to convert carveout memory requests to
-#	  I/O virtual memory requests.
+config NVMAP_CONVERT_CARVEOUT_TO_IOVMM
+	bool "Convert carveout to IOVMM"
+	depends on TEGRA_NVMAP &&  (TEGRA_IOVMM_SMMU || IOMMU_API)
+	default y
+	help
+	  Say Y here to force to convert carveout memory requests to
+	  I/O virtual memory requests.
 
 config TEGRA_NVHDCP
 	bool "Support NVHDCP content protection on HDMI"
