--- a/arch/arm/configs/tegra_android_defconfig
+++ b/arch/arm/configs/tegra_android_defconfig
@@ -453,7 +453,8 @@ CONFIG_CACHE_L2X0=y
 CONFIG_PL310_ERRATA_727915=y
 # CONFIG_PL310_ERRATA_753970 is not set
 CONFIG_PL310_ERRATA_769419=y
-CONFIG_ARM_L1_CACHE_SHIFT=5
+CONFIG_ARM_L1_CACHE_SHIFT_6=y
+CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 CONFIG_ARM_HEAVY_MB=y
 CONFIG_ARM_KERNMEM_PERMS=y
@@ -676,7 +677,6 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
-CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -1676,6 +1676,7 @@ CONFIG_BCM4330=y
 # CONFIG_BCM4359 is not set
 # CONFIG_BCM4361 is not set
 # CONFIG_BCM43241 is not set
+# CONFIG_BCM43456 is not set
 # CONFIG_BCM43455 is not set
 # CONFIG_BCM4334W is not set
 # CONFIG_BCM43454 is not set
@@ -1686,6 +1687,8 @@ CONFIG_WLAN_REGION_CODE=100
 # CONFIG_WL_NAN is not set
 # CONFIG_BCMDHD_OOB_HOST_WAKE is not set
 # CONFIG_SPLIT_ARGOS_SET is not set
+# CONFIG_WLAN_GREAT is not set
+# CONFIG_BCM_DETECT_CONSECUTIVE_HANG is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2983,7 +2986,6 @@ CONFIG_LEDS_ISA1200=y
 # LED Triggers
 #
 # CONFIG_LEDS_TRIGGERS is not set
-# CONFIG_SWITCH is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_EDAC_ATOMIC_SCRUB=y
 CONFIG_EDAC_SUPPORT=y
@@ -3126,6 +3128,11 @@ CONFIG_STAGING=y
 # Android
 #
 CONFIG_ASHMEM=y
+# CONFIG_ANDROID_TIMED_OUTPUT is not set
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+CONFIG_SYNC=y
+# CONFIG_SW_SYNC is not set
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
@@ -3135,11 +3142,6 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 # CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
 # CONFIG_ANDROID_RAM_CONSOLE_DEBUG_CONSOLE_SUSPENDED is not set
-# CONFIG_ANDROID_TIMED_OUTPUT is not set
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_SYNC=y
-# CONFIG_SW_SYNC is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -3156,6 +3158,8 @@ CONFIG_ION=y
 # CONFIG_WILC1000_DRIVER is not set
 # CONFIG_MOST is not set
 CONFIG_TEGRA_DOWNSTREAM=y
+CONFIG_TEGRA_IOVMM_GART=y
+CONFIG_TEGRA_IOVMM=y
 CONFIG_TEGRA_RPC=y
 CONFIG_TEGRA_AVP=y
 CONFIG_TEGRA_AVP_KERNEL_ON_MMU=y
@@ -3171,6 +3175,7 @@ CONFIG_TEGRA_DC=y
 CONFIG_FB_TEGRA=y
 CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_TEGRA_NVMAP=y
+# CONFIG_NVMAP_RECLAIM_UNPINNED_VM is not set
 CONFIG_NVMAP_ALLOW_SYSMEM=y
 # CONFIG_NVMAP_HIGHMEM_ONLY is not set
 CONFIG_NVMAP_CARVEOUT_KILLER=y
