bcmdhd: enable rxf thread

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -1041,6 +1041,7 @@ ifneq ($(CONFIG_BCM4330),)
   DHDCFLAGS += -DCUSTOM_GLOM_SETTING=0
   DHDCFLAGS += -DWL_CFG80211_GON_COLLISION
   DHDCFLAGS += -DDHD_UNSUPPORT_IF_CNTS
+  DHDCFLAGS += -DRXFRAME_THREAD
 ifeq ($(CONFIG_BCM4330),y)
   DHDCFLAGS += -DENABLE_INSMOD_NO_FW_LOAD
   DHDCFLAGS += -DUSE_LATE_INITCALL_SYNC
