defconfig: enable mfd wm8994 driver

--- a/arch/arm/configs/tegra_android_defconfig
+++ b/arch/arm/configs/tegra_android_defconfig
@@ -1199,6 +1199,7 @@ CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_MMIO=y
+CONFIG_REGMAP_IRQ=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -2067,6 +2068,7 @@ CONFIG_GPIO_SYSFS=y
 # MFD GPIO expanders
 #
 CONFIG_GPIO_TPS6586X=y
+# CONFIG_GPIO_WM8994 is not set
 
 #
 # SPI or I2C GPIO expanders
@@ -2336,7 +2338,7 @@ CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM831X_I2C is not set
 # CONFIG_MFD_WM8350_I2C is not set
-# CONFIG_MFD_WM8994 is not set
+CONFIG_MFD_WM8994=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -2368,6 +2370,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
 CONFIG_REGULATOR_TPS6586X=y
+CONFIG_REGULATOR_WM8994=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2553,10 +2556,7 @@ CONFIG_SND_SOC_TEGRA_WM8994=y
 # CONFIG_SND_SOC_TEGRA_MAX98090 is not set
 # CONFIG_SND_SOC_TEGRA_RT5677 is not set
 # CONFIG_SND_SOC_XTFPGA_I2S is not set
-CONFIG_SND_VOODOO=y
-CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
-CONFIG_SND_VOODOO_HP_LEVEL=47
-CONFIG_SND_VOODOO_RECORD_PRESETS=y
+CONFIG_SND_VOODOO=n
 # CONFIG_SND_VOODOO_DEVELOPMENT is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 
