--- a/arch/arm/boot/dts/tegra20-samsung_p3.dts
+++ b/arch/arm/boot/dts/tegra20-samsung_p3.dts
@@ -656,6 +656,7 @@
 			reg = <0>;
 			#address-cells = <1>;
 			#size-cells = <0>;
+/*
 			@4C {
 				compatible = "samsung,sec_touch";
 				reg = <0x4C>;
@@ -667,6 +668,16 @@
 				touch-int-gpio = <&gpio TEGRA_GPIO(D, 4) IRQ_TYPE_LEVEL_HIGH>;
 
 				notify-cable;
+			};
+*/
+			touch@4c {
+				compatible = "atmel,maxtouch";
+				reg = <0x4c>;
+				interrupt-parent = <&gpio>;
+				interrupts = <TEGRA_GPIO(D, 4) IRQ_TYPE_LEVEL_LOW>;
+
+				touch-en-gpio = <&gpio TEGRA_GPIO(J, 2) IRQ_TYPE_LEVEL_HIGH>;
+				touch-rst-gpio = <&gpio TEGRA_GPIO(D, 3) IRQ_TYPE_LEVEL_HIGH>;
 			};
 		};
 
