--- a/arch/arm/configs/tegra_android_defconfig
+++ b/arch/arm/configs/tegra_android_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.4.115 Kernel Configuration
+# Linux/arm 4.4.123 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -594,6 +594,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
+CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -1169,6 +1170,7 @@ CONFIG_RFKILL_GPIO=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 # CONFIG_LWTUNNEL is not set
+CONFIG_DST_CACHE=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
@@ -2556,8 +2558,7 @@ CONFIG_SND_SOC_TEGRA_WM8994=y
 # CONFIG_SND_SOC_TEGRA_MAX98090 is not set
 # CONFIG_SND_SOC_TEGRA_RT5677 is not set
 # CONFIG_SND_SOC_XTFPGA_I2S is not set
-CONFIG_SND_VOODOO=n
-# CONFIG_SND_VOODOO_DEVELOPMENT is not set
+# CONFIG_SND_VOODOO is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 
 #
@@ -3255,7 +3256,6 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_USB_GPIO is not set
 CONFIG_MEMORY=y
 # CONFIG_ARM_PL172_MPMC is not set
-CONFIG_TEGRA20_MC=y
 CONFIG_TEGRA_MC=y
 # CONFIG_IIO is not set
 CONFIG_PWM=y
@@ -3438,6 +3438,7 @@ CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
+CONFIG_PROC_UID=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
@@ -3826,6 +3827,7 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_CHACHA20 is not set
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
+# CONFIG_CRYPTO_SPECK is not set
 # CONFIG_CRYPTO_TEA is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
