HACK: gpio: tegra: forward port p4wifi gpio suspend operations

--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -37,3 +37,4 @@ endif
 obj-$(CONFIG_ARCH_TEGRA_2x_SOC)		+= board-paz00.o
 
 obj-$(CONFIG_ARCH_TEGRA_2x_SOC)		+= board-p4wifi.o
+obj-$(CONFIG_ARCH_TEGRA_2x_SOC)		+= board-p4-gpio.o
