DT: Convert to named i2c-gpio bindings

--- a/arch/arm/boot/dts/tegra20-samsung_p3.dts
+++ b/arch/arm/boot/dts/tegra20-samsung_p3.dts
@@ -641,7 +641,9 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		mux-gpios = <&gpio 27 0 &gpio 28 0 &gpio 74 0>;
+		mux-gpios = <&gpio TEGRA_GPIO(D, 3) GPIO_ACTIVE_HIGH
+			&gpio TEGRA_GPIO(D, 4) GPIO_ACTIVE_HIGH
+			&gpio TEGRA_GPIO(J, 2) GPIO_ACTIVE_HIGH>;
 
 		i2c-parent = <&{/i2c@7000c400}>;
 
@@ -693,9 +695,11 @@
 
 	i2c@5 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 194 0 /* sda */
-			 &gpio 192 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(Y, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(Y, 0)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -709,9 +713,11 @@
 	};
 	i2c@6 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 112 0 /* sda */
-			 &gpio 119 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(O, 0)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(O, 7)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -732,18 +738,22 @@
 	};
 	i2c@7 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 178 0 /* sda */
-			 &gpio 187 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(W, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(X, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
 	i2c@8 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 51 0 /* sda */
-			 &gpio 64 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(G, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(I, 0)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -763,9 +773,11 @@
 	};
 	i2c@9 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 195 0 /* sda */
-			 &gpio 193 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(Y, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(Y, 1)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -780,9 +792,11 @@
 	};
 	i2c@10 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 203 0 /* sda */
-			 &gpio 22 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(Z, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(C, 6)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <3>;
 		i2c-gpio,timeout-ms = <0>;
 		#address-cells = <1>;
@@ -804,9 +818,11 @@
 	};
 	i2c@11 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 50 0 /* sda */
-			 &gpio 71 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(G, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(I, 7)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <3>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -820,9 +836,11 @@
 	};
 	i2c@12 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 116 0 /* sda */
-			 &gpio 114 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(O, 4)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(O, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -836,27 +854,33 @@
 	};
 	i2c@13 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 59 0 /* sda */
-			 &gpio 58 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(H, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(H, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <3>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
 	i2c@14 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 83 0 /* sda */
-			 &gpio 72 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(K, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(J, 0)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <3>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
 	i2c@15 {
 		compatible = "i2c-gpio";
-		gpios = <&gpio 67 0 /* sda */
-			 &gpio 82 0 /* scl */
-			>;
+		gpios = <
+			&gpio TEGRA_GPIO(I, 3)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* sda */
+			&gpio TEGRA_GPIO(K, 2)
+				(GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN) /* scl */ >;
 		i2c-gpio,delay-us = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
