--- a/arch/arm/configs/tegra_android_twrp_defconfig
+++ b/arch/arm/configs/tegra_android_twrp_defconfig
@@ -1286,6 +1286,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_SEC_MISC=y
+CONFIG_SAMSUNG_JACK=y
 CONFIG_BCM4751_POWER=y
 # CONFIG_BLUEDROID_PM is not set
 # CONFIG_C2PORT is not set
@@ -1656,7 +1657,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_AR1021_I2C is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CHIPONE_ICN8318 is not set
@@ -1699,7 +1700,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
-CONFIG_TOUCHSCREEN_MXT1386=y
+# CONFIG_TOUCHSCREEN_MXT1386 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1957,7 +1958,6 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27XXX is not set
 # CONFIG_BATTERY_MAX17040 is not set
-# CONFIG_BATTERY_MAX17042 is not set
 CONFIG_BATTERY_MAX17042_P4=y
 # CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
@@ -1972,6 +1972,7 @@ CONFIG_CHARGER_GPIO=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_CHARGER_RT9455 is not set
+CONFIG_BATTERY_P4=y
 # CONFIG_SAMSUNG_LPM_MODE is not set
 # CONFIG_POWER_RESET is not set
 # CONFIG_POWER_AVS is not set
