--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -480,6 +480,12 @@ config BACKLIGHT_RAVE_SP
 	help
 	  Support for backlight control on RAVE SP device.
 
+config BACKLIGHT_CMC623_PWM
+        bool "CMC623 PWM Backlight Driver"
+        depends on BACKLIGHT_CLASS_DEVICE
+        help
+          Say Y to enalbe the backlight driven by CMC623
+
 endif # BACKLIGHT_CLASS_DEVICE
 
 endif # BACKLIGHT_LCD_SUPPORT
