ARM: dts: tegra20: Add IOMMU nodes to Host1x clients
Enable IOMMU support for Host1x clients.

Signed-off-by: Dmitry Osipenko <digetx@gmail.com>

--- a/arch/arm/boot/dts/tegra20.dtsi
+++ b/arch/arm/boot/dts/tegra20.dtsi
@@ -50,6 +50,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_MPE>;
 			resets = <&tegra_car 60>;
 			reset-names = "mpe";
+
+			iommus = <&mc>;
 		};
 
 		vi@54080000 {
@@ -59,6 +61,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_VI>;
 			resets = <&tegra_car 20>;
 			reset-names = "vi";
+
+			iommus = <&mc>;
 		};
 
 		epp@540c0000 {
@@ -68,6 +72,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_EPP>;
 			resets = <&tegra_car 19>;
 			reset-names = "epp";
+
+			iommus = <&mc>;
 		};
 
 		isp@54100000 {
@@ -77,6 +83,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_ISP>;
 			resets = <&tegra_car 23>;
 			reset-names = "isp";
+
+			iommus = <&mc>;
 		};
 
 		gr2d@54140000 {
@@ -86,6 +94,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_GR2D>;
 			resets = <&tegra_car 21>;
 			reset-names = "2d";
+
+			iommus = <&mc>;
 		};
 
 		gr3d@54180000 {
@@ -94,6 +104,8 @@
 			clocks = <&tegra_car TEGRA20_CLK_GR3D>;
 			resets = <&tegra_car 24>;
 			reset-names = "3d";
+
+			iommus = <&mc>;
 		};
 
 		dc@54200000 {
@@ -107,6 +119,8 @@
 			reset-names = "dc";
 
 			nvidia,head = <0>;
+
+			iommus = <&mc>;
 
 			rgb {
 				status = "disabled";
@@ -124,6 +138,8 @@
 			reset-names = "dc";
 
 			nvidia,head = <1>;
+
+			iommus = <&mc>;
 
 			rgb {
 				status = "disabled";
