--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -17,3 +17,17 @@ menuconfig ARCH_TEGRA
 	select ZONE_DMA if ARM_LPAE
 	help
 	  This enables support for NVIDIA Tegra based systems.
+
+if ARCH_TEGRA
+
+config MACH_SAMSUNG_VARIATION_TEGRA
+       bool "Samsung variations based on Tegra 2"
+       help
+         Support for Samsung board based on NVIDIA Tegra 2 BSP
+
+config MACH_SAMSUNG_P4WIFI
+       bool "Samsung P4-WiFi only board"
+       depends on MACH_SAMSUNG_VARIATION_TEGRA
+       select MACH_HAS_SND_SOC_TEGRA_WM8994 if SND_SOC
+
+endif
