DT: Enable tegra20-rtc
fixes hang at hwclock service on postmarketOS

--- a/arch/arm/boot/dts/tegra20-samsung_p3.dts
+++ b/arch/arm/boot/dts/tegra20-samsung_p3.dts
@@ -62,7 +62,7 @@
 	/* Disable tegra20-rtc because it breaks tps6586x rtc */
 	rtc@7000e000 {
 		compatible = "nvidia,tegra20-rtc";
-		status = "disabled";
+		status = "okay";
 	};
 
 	clocks {
